# ar_model_gibbs

./: .RData  .Rhistory  .gitignore  CMakeLists.txt  coordinates.h  dataparse.R  gibbs_sampler.h  main.cpp  matern.h
R/: script.R
ar_model/: ar_class.cpp  ar_class.h
calc_posterior/: posterior.cpp  posterior.h
coordinates/: coordinates.cpp  coordinates.h
proto/: CMakeLists.txt  dataparse.proto  o.proto  scalar_it.proto  vector_it.proto  ydata.proto
protocpp/: serialize.cpp  serialize.h
